[tool.poetry]
name = "deep-frozen-lake"
version = "0.1.0"
description = ""
authors = ["Marcelo Lemos <marceloharrylemos@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "deep_frozen_lake"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.3"
gymnasium = "^0.28.1"
torch = "^2.0.0"
pytorch-lightning = "^2.0.2"
torchmetrics = "^0.11.4"
wandb = "^0.15.0"
hydra-core = "^1.3.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
